# paceship

./: .gitignore  CONTRIBUTING.md  README.md  pyproject.toml
notebooks/: blue-marble.ipynb
scripts/: developer.sh  setup.sh
src/paceship/: __init__.py  core.py
